...
                                                <rect key="frame" x="0.0" y="70.333333333333329" width="388" height="30"/>
                                                <color key="backgroundColor" red="0.88809448479999997" green="0.15274015069999999" blue="0.39826655389999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" hint="SignIn" identifier="SignIn" label="SignIn"/>
                                                <state key="normal" title="Sign In with Browser">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                                <rect key="frame" x="0.0" y="142.33333333333334" width="388" height="30"/>
                                                <color key="backgroundColor" red="0.88809448479999997" green="0.15274015069999999" blue="0.39826655389999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" hint="Authenticate" identifier="Authenticate" label="Authenticate"/>
                                                <state key="normal" title="Authenticate">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="125.33333333333333" height="30"/>
                                                        <color key="backgroundColor" red="0.082239262760000001" green="0.22937607769999999" blue="0.33745151759999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="GetUser" label="GetUser"/>
                                                        <state key="normal" title="Get User">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                                        <rect key="frame" x="131.33333333333334" y="0.0" width="125.33333333333334" height="30"/>
                                                        <color key="backgroundColor" red="0.082239262760000001" green="0.22937607769999999" blue="0.33745151759999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Introspect" label="Introspect"/>
                                                        <state key="normal" title="Introspect">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                                        <rect key="frame" x="262.66666666666669" y="0.0" width="125.33333333333331" height="30"/>
                                                        <color key="backgroundColor" red="0.082239262760000001" green="0.22937607769999999" blue="0.33745151759999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <state key="normal" title="Revoke">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                        </state>
...
                                                <rect key="frame" x="0.0" y="0.0" width="388" height="259"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <accessibility key="accessibilityConfiguration" identifier="tokenView"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="259" id="bb4-0J-JsF"/>
...
                                                <rect key="frame" x="0.0" y="264.00000000000006" width="388" height="30"/>
                                                <color key="backgroundColor" red="0.88809448479999997" green="0.15274015069999999" blue="0.39826655389999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" title="Clear">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
...
                                                <rect key="frame" x="0.0" y="299.00000000000006" width="388" height="30"/>
                                                <color key="backgroundColor" red="0.88809448479999997" green="0.15274015069999999" blue="0.39826655389999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" hint="SignOutOkta" identifier="SignOutOkta" label="SignOutOkta"/>
                                                <state key="normal" title="Sign Out">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <color key="tintColor" red="0.88809448479999997" green="0.15274015069999999" blue="0.39826655389999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" hint="SessionTokenTextView" identifier="SessionTokenTextView" label="SessionTokenTextView"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="100" id="LUo-0m-oPi"/>
...
                                        <rect key="frame" x="0.0" y="143" width="348" height="30"/>
                                        <color key="backgroundColor" red="0.88809448479999997" green="0.15274015069999999" blue="0.39826655389999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" hint="Authenticate" identifier="AuthenticateWithSessionToken" label="Authenticate"/>
                                        <state key="normal" title="Authenticate">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <rect key="frame" x="0.0" y="183" width="348" height="100"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" hint="MessageView" identifier="MessageView" label="MessageView"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="100" id="2Y1-Ta-xCH"/>
...
